--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <nav class="main-navigation">
           <ul class="main-navigation__list">
             <li class="main-navigation__item main-navigation__item--current">
-              <a href="#">Главная</a>
+              <a class="main-navigation__link" href="#">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a href="catalog.html">Каталог продукции</a>
+              <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="main-navigation__item">
-              <a href="form.html">Подбор программы</a>
+              <a class="main-navigation__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
