Добавил адаптивные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page__body">
     <header class="page-header page-header--catalog">
-      <div class="page-header__wrapper">
+      <div class="page-header__wrapper content-wrapper">
         <a class="page-header__logo page-header__logo-image" href="#">
           <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
         </a>
@@ -34,7 +34,7 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="page__content-wrapper">
+      <div class="content-wrapper">
         <h1 class="page-main__title">Каталог продукции</h1>
         <section class="catalog">
           <h2 class="visually-hidden">Основные товары</h2>
@@ -144,7 +144,7 @@
               </dl>
               <a class="catalog__item-link-order catalog-link-order" href="#">Заказать</a>
             </li>
-            <li class="catalog__item--show-more">
+            <li class="catalog__item-show-more">
               <button class="catalog__button-show-more visually-hidden">Показать еще несколько товаров</button>
               <a class="catalog__item-link" href="#">
                 <h3 class="catalog__item-title catalog__item-title--show-more">Показать еще 100500 товаров</h3>
@@ -200,7 +200,7 @@
       </div>
       <section class="address-map address-map--grey-bg">
         <h2 class="visually-hidden">Адрес и карта местоположения</h2>
-        <div class="address-map__wrapper">
+        <div class="address-map__wrapper content-wrapper">
           <p class="address-map__text">
             Приглашаем к сотрудничеству дилеров!
           </p>
@@ -217,7 +217,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper content-wrapper">
         <a class="page-footer__logo" href="#">
           <img class="page-footer__logo-img" width="128" height="24" src="img/footer-logo-cat.svg" alt="Cat-Energy">
         </a>
