--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page__body">
     <header class="page-header page-header--form">
-      <div class="page-header__wrapper">
+      <div class="page-header__wrapper content-wrapper">
         <a class="page-header__logo page-header__logo-image" href="#">
           <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
         </a>
@@ -34,7 +34,7 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="page-main__wrapper">
+      <div class="content-wrapper">
         <h1 class="page-main__title page-main__title--form">Подбор программы</h1>
         <p class="page-main__text page-main__text--form">Заполните анкету, и мы подберем программу питания для вашего кота</p>
         <form class="form" action="https://echo.htmlacademy.ru" method="post">
@@ -120,7 +120,7 @@
       </div>
       <section class="address-map address-map--grey-bg">
         <h2 class="visually-hidden">Адрес и карта местоположения</h2>
-        <div class="address-map__wrapper address-map__wrapper--form">
+        <div class="address-map__wrapper address-map__wrapper--form content-wrapper">
           <p class="address-map__text">
             Приглашаем к сотрудничеству дилеров!
           </p>
@@ -137,7 +137,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper content-wrapper">
         <a class="page-footer__logo" href="#">
           <img class="page-footer__logo-img" width="128" height="24" src="img/footer-logo-cat.svg" alt="Cat-Energy">
         </a>
