--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cat-energy</title>
+    <link rel="icon" href="icon-32.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <div class="page-header__wrapper">
+      <div class="page-header__wrapper content-wrapper">
         <a class="page-header__logo page-header__logo-image" href="#">
-          <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
+          </picture>
+
         </a>
         <a class="page-header__logo page-header__logo-text" href="#">
           <img class="page-header__logo-img" width="101" height="18" src="img/logo-mobile-text.svg" alt="">
@@ -34,17 +41,20 @@
       </div>
       <section class="choose-program">
         <h1 class="visually-hidden">Cat-Energy, подбираем питание для котов</h1>
-        <div class="choose-program__decorate-bg"></div>
-        <div class="choose-program__wrapper">
+        <div class="choose-program__wrapper content-wrapper">
           <h2 class="choose-program__title medium-titles">Функциональное<br> питание для котов</h2>
           <p class="choose-program__text">Занялся собой? Займись котом!</p>
-          <img class="choose-program__img-logo" width="280" height="270" src="img/index-can-mobile.png" alt="">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x">
+            <img class="choose-program__img-logo" width="280" height="270" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x" alt="Упаковка Cat-Energy">
+          </picture>
           <a class="choose-program__link" href="#">Подобрать программу</a>
         </div>
       </section>
     </header>
     <main class="page-main">
-      <div class="page__content-wrapper">
+      <div class="content-wrapper">
         <section class="program-plans">
           <h2 class="visually-hidden">Планы питания для котов</h2>
           <ul class="program-plans__list">
@@ -91,7 +101,7 @@
       </div>
 
       <section class="example">
-        <div class="example__wrapper">
+        <div class="example__wrapper content-wrapper">
           <div class="wrapper-with-text">
             <h2 class="example__title medium-titles">Живой пример</h2>
             <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой
@@ -109,14 +119,16 @@
                 <p class="example__description">затрачено времени</p>
               </li>
               <li class="example__item example__item--large-cell">
-                <p class="example__cost">Затраты на питание: 15 000 руб.</p>
+                <p class="example__cost">Затраты на питание: <span>15 000 руб.</span></p>
               </li>
             </ul>
           </div>
           <div class="wrapper-with-picture">
-            <div class="example__img-wrapper">
+            <picture>
+              <source media="(min-width: 768px)" srcset="img/image-cat-tablet.png 1x, img/image-cat-tablet@2x.png 2x">
+              <img class="example__img-wrapper" src="img/cat-before-mobile.png" srcset="img/cat-before-mobile@2x.png 2x" alt="Пухлый кот">
+            </picture>
 
-            </div>
             <div class="example-slider">
               <span class="example-slider__text-from-to">Было</span>
               <div class="example-slider__range">
@@ -130,7 +142,7 @@
 
       <section class="address-map">
         <h2 class="visually-hidden">Адрес и карта местоположения</h2>
-        <div class="address-map__wrapper">
+        <div class="address-map__wrapper content-wrapper">
           <p class="address-map__text">
             Приглашаем к сотрудничеству дилеров!
           </p>
@@ -147,7 +159,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper content-wrapper">
         <a class="page-footer__logo" href="#">
           <img class="page-footer__logo-img" width="128" height="24" src="img/footer-logo-cat.svg" alt="Cat-Energy">
         </a>
