Доделал адаптивные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,11 @@
     <header class="page-header page-header--catalog">
       <div class="page-header__wrapper content-wrapper">
         <a class="page-header__logo page-header__logo-image" href="#">
-          <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
+          </picture>
         </a>
         <a class="page-header__logo page-header__logo-text" href="#">
           <img class="page-header__logo-img" width="101" height="18" src="img/logo-mobile-text.svg" alt="">
@@ -41,7 +45,10 @@
           <ul class="catalog__list">
             <li class="catalog__item">
               <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" width="68" height="86" src="img/chicken-small-mobile.png" alt="">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/chicken-tablet-small@1x.png 1x, img/chicken-tablet-small@2x.png 2x">
+                  <img class="catalog__item-img" width="68" height="86" src="img/chicken-small-mobile.png" srcset="img/chicken-small-mobile.png 1x, img/chicken-small-mobile@2x.png 2x" alt="Упаковка курица 500г">
+                </picture>
               </a>
               <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
               <dl class="catalog__list-inner">
@@ -55,8 +62,12 @@
               <a class="catalog__item-link-order catalog-link-order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" src="img/chicken-big-mobile.png" alt="">
+              <a class="catalog__item-link catalog__item-link--big" href="#">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/chicken-tablet-big@1x.png 1x, img/chicken-tablet-big@2x.png 2x">
+                  <img class="catalog__item-img catalog__item-img--big" width="84" height="100" src="img/chicken-big-mobile.png" srcset="img/chicken-big-mobile.png 1x, img/chicken-big-mobile@2x.png 2x" alt="Упаковка курица 1000г">
+                </picture>
+
               </a>
               <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
               <dl class="catalog__list-inner">
@@ -71,7 +82,10 @@
             </li>
             <li class="catalog__item">
               <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" src="img/fish-small-mobile.png" alt="">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/fish-tablet-small@1x.png 1x, img/fish-tablet-small@2x.png 2x">
+                  <img class="catalog__item-img" width="68" height="86" src="img/fish-small-mobile.png" srcset="img/fish-small-mobile.png 1x, img/fish-small-mobile@2x.png 2x" alt="Упаковка рыба 500г">
+                </picture>
               </a>
               <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
               <dl class="catalog__list-inner">
@@ -85,8 +99,12 @@
               <a class="catalog__item-link-order catalog-link-order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" src="img/fish-big-mobile.png" alt="">
+              <a class="catalog__item-link catalog__item-link--big" href="#">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/fish-tablet-big@1x.png 1x, img/fish-tablet-big@2x.png 2x">
+                  <img class="catalog__item-img catalog__item-img--big" width="84" height="100" src="img/fish-big-mobile.png" srcset="img/fish-big-mobile@2x.png 2x" alt="Упаковка рыба 1000г">
+                </picture>
+
               </a>
               <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
               <dl class="catalog__list-inner">
@@ -101,7 +119,11 @@
             </li>
             <li class="catalog__item">
               <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" src="img/blackwheat-small-mobile.png" alt="">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/blackwheat-small-tablet@1x.png 1x, img/blackwheat-small-tablet@2x.png 2x">
+                  <img class="catalog__item-img" width="68" height="86" src="img/blackwheat-small-mobile.png" srcset="img/blackwheat-small-mobile@2x.png 2x" alt="Упаковка гречка 500г">
+                </picture>
+
               </a>
               <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
               <dl class="catalog__list-inner">
@@ -115,8 +137,11 @@
               <a class="catalog__item-link-order catalog-link-order" href="#">Заказать</a>
             </li>
             <li class="catalog__item">
-              <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" src="img/blackwheat-big-mobile.png" alt="">
+              <a class="catalog__item-link catalog__item-link--big" href="#">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/blackwheat-tablet-big@1x.png 1x, img/blackwheat-tablet-big@2x.png 2x">
+                  <img class="catalog__item-img catalog__item-img--big" width="84" height="100" src="img/blackwheat-big-mobile.png" srcset="img/blackwheat-big-mobile@2x.png 2x" alt="Упаковка гречка 1000г">
+                </picture>
               </a>
               <h3 class="catalog__item-title">Cat Energy Slim 1000 г</h3>
               <dl class="catalog__list-inner">
@@ -131,7 +156,10 @@
             </li>
             <li class="catalog__item">
               <a class="catalog__item-link" href="#">
-                <img class="catalog__item-img" src="img/rice-small-mobile.png" alt="">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/rice-tablet-small@1x.png 1x, img/rice-tablet-small@2x.png 2x">
+                  <img class="catalog__item-img" width="68" height="86" src="img/rice-small-mobile.png" srcset="img/rice-small-mobile@2x.png 2x" alt="Упаковка рис 500г">
+                </picture>
               </a>
               <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
               <dl class="catalog__list-inner">
