--- a/form.html
+++ b/form.html
@@ -10,7 +10,11 @@
     <header class="page-header page-header--form">
       <div class="page-header__wrapper content-wrapper">
         <a class="page-header__logo page-header__logo-image" href="#">
-          <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-img" width="33" height="38" src="img/logo-mobile-pic.svg" alt="Cat-Energy">
+          </picture>
         </a>
         <a class="page-header__logo page-header__logo-text" href="#">
           <img class="page-header__logo-img" width="101" height="18" src="img/logo-mobile-text.svg" alt="">
